fix(functions): use sb-px2rems in sb-rem-spacing

--- a/src/tools/_functions.scss
+++ b/src/tools/_functions.scss
@@ -12,12 +12,11 @@
   @return ($px / $base-font-size) * 1rem;
 }
 
-// This function returns a rems value based on the given size keyword (eg: '-xs', '-s')
+// This function returns a rems value based on the given size keyword (eg: 'xs', 's')
 @function sb-rem-spacing($size) {
-  $base-font-size: 16px;
   $px: map-get($sb-spacing-map, '-#{$size}');
 
-  @return ($px / $base-font-size) * 1rem;
+  @return sb-px2rems($px);
 }
 
 // This mixin creates color classes out of the given color map
